:construction: trainer view & battle view

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,8 @@ trainer.service.url=http://localhost:8081
 zuul.routes.pokemon-types.path=/api/pokemon-types/**
 zuul.routes.pokemon-types.url=http://localhost:8080/pokemon-types/
 
+zuul.routes.trainers.path=/api/trainers/**
+zuul.routes.trainets.url=http://localhost:8081/trainers/
+
 zuul.routes.battle.path=/api/battles/**
 zuul.routes.battle.url=http://localhost:8082/battles/
