--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,26 @@
-logging.level.web=TRACE
+logging.level.org.springframework.security=DEBUG
+logging.level.web=DEBUG
 
 spring.mustache.prefix=classpath:/templates/
-
 spring.mustache.suffix=.html
+spring.mustache.expose-request-attributes=true
+#spring.mustache.expose-session-attributes=true
+#spring.mustache.request-context-attribute=req
 
 server.port=9000
 
 pokemonType.service.url=http://localhost:8080
+
 trainer.service.url=http://localhost:8081
+trainer.service.username=user
+trainer.service.password=e0aca759-58c9-41a1-a61c-997ceadda24c
 
 # router proxy configuration !
 zuul.routes.pokemon-types.path=/api/pokemon-types/**
 zuul.routes.pokemon-types.url=http://localhost:8080/pokemon-types/
 
 zuul.routes.trainers.path=/api/trainers/**
-zuul.routes.trainets.url=http://localhost:8081/trainers/
+zuul.routes.trainers.url=http://localhost:8081/trainers/
 
 zuul.routes.battle.path=/api/battles/**
 zuul.routes.battle.url=http://localhost:8082/battles/
